--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,165 @@
 <html>
-<head>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SVR Real Estate</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+      @media(min-width:750px) and (max-width:1500px)
+      {
+      .c1
+      {
+          padding:10px;
+      }
+       .n1
+      {
+          color:blue;
+          font-size:50px;
+          margin-top:5px;
+          width:100%;
+          height:100px;
+      }
+      .n1 p
+      {
+          color:green;
+          font-size:20px;
+          margin-left:20px;
+          text-align:right;
+      }
+      
+      .maincontent
+      {
+          width:100%;
+          height:430px;
+          border:2px solid black;
+          border-radius:5px;
+      }
+      #image
+      {
+          width:100%;
+          height:428px;
+      }
+      .row
+      {
+          padding:20px;
+          margin-top:20px;
+      }
+      .col-md-6
+      {
+          width:25%;
+          float:left;
+          font-style:bold;
+          height:200px;
+          border:1px solid black;
+          padding:0px;
+          color:white;
+          font-size:15px;
+      }
+      #userimg
+      {
+          width:100%;
+          height:178px;
+      }
+      .l1
+      {
+          border:1px solid black;
+          padding:0px;
+          height:20px;
+          text-align:center;
+          background-color:DodgerBlue;
+      }
+      }
+      
+      @media (max-width:750px)
+      {
+          .n1
+          {
+              font-size:25px;
+              color:blue;
+              margin-top:5px;
+              width:100%;
+              height:40px;
+          }
+          .n1 p
+      {
+          color:green;
+          font-size:10px;
+          margin-left:20px;
+          text-align:right;
+
+      }
+      .maincontent
+      {
+          width:100%;
+          height:250px;
+          border:2px solid black;
+          border-radius:5px;
+      }
+      .row
+      {
+          padding:30px;
+          margin-top:20px;
+      }
+      #image
+      {
+          width:100%;
+          height:248px;
+      }
+      .col-sm-6
+      {
+          width:50%;
+          float:left;
+          height:150px;
+          padding:0px;
+          border:1px solid black;
+
+      }
+       #userimg
+      {
+          width:100%;
+          height:123px;
+      }
+      .l1
+      {
+          border:1px solid black;
+          padding:0px;
+          text-align:center;
+          background-color:DodgerBlue;
+      }
+      }
+      </style>
+  </head>
 <body>
-Hi,Welcome to website.
+
+  <div class="c1">
+<div class="n1">
+      SVR Real Estate
+      <p id="title1">A website for real estate business</p>
+      </div>
+       <hr style="height:2px;border-width:0;color:gray;background-color:black;">
+  <div class="maincontent">
+    <img id="image" src="webimages5.jpg"/>
+      </div>
+      <div class="row">
+    <div class="col-md-6 col-sm-6">
+      <div class="l1"><b>Login</b></div>
+      <img id="userimg" src="userimage.png"/>
+      </div>
+    <div class="col-md-6 col-sm-6">
+     <div class="l1"><b>Home Page</b></div>
+     <img id="userimg" src="homelogo.png"/>
+    </div>
+    <div class="col-md-6 col-sm-6">
+      <div class="l1">Hi</div>
+      </div>
+    <div class="col-md-6 col-sm-6">
+     <div class="l1">Hi</div>
+    </div>
+   </div>
+  </div>
 </body>
 </html>
